# nimbiestatemachine

./: .gitignore  HARDWARE_STATE_MAPPING.md  LICENSE  Makefile  README.md  STATE_MACHINE_API.md  pyproject.toml  pytest.ini  requirements.txt
examples/: README.md  example_disk_imaging.py  example_logging_config.py  example_polling_config.py  example_pure_state_machine.py  example_simple.py  example_state_machine.py  test_queue_cycle.py
nimbie/: __init__.py  driver.py  eject.py  pure_state_machine.py  state_machine.py
scripts/: add_disk_and_test.py  check_hardware_state.py  check_queue.py  close_tray.py  manual_close_tray.py  reset_hardware.py  reset_hardware_advanced.py
tests/: conftest.py  test_accept_trigger.py  test_drive_parameter.py  test_drutil_direct.py  test_error_handling.py  test_fixed_single_connection.py  test_full_cycle.py  test_full_load_sequence.py  test_hierarchical_state.py  test_high_level_operations.py  test_init_open_tray.py  test_initialize_transition.py  test_is_processing.py  test_load_disk_trigger.py  test_load_with_disk.py  test_nimbie_driver.py  test_nimbie_state_machine.py  test_polling.py  test_polling_config.py  test_processing_state.py  test_proper_cleanup.py  test_pure_hardware.py  test_pure_state_machine.py  test_reject_path.py  test_simple_load.py  test_substate_transitions.py  test_tray_opens.py  test_tray_polling.py  test_usb_disconnect.py
tests/hardware_recovery/: README.md  check_detailed_state.py  check_dropper_state.py  force_disk_removal.py  manual_disk_removal.py  recover_dropper.py  setup_disk_in_drive.py  test_example_recovery.py  test_improved_startup.py  test_lifted_disk_startup.py  test_startup_recovery.py  verify_clean_state.py
tests/recovery/: test_disk_in_closed_drive_recovery.py  test_disk_in_open_tray_recovery.py  test_disk_lifted_recovery.py  test_manual_error_recovery.py  test_real_cd_in_drive_recovery.py  test_real_error_recovery.py  test_recovery.py  test_simulated_manual_cd_recovery.py  test_single_connection_error_recovery.py  test_tray_open_recovery.py
